Got remote enclave dist and test working again with exception of versionIT. Reapplied chanegs to party info having rolled back as part of working out why Enclave.create introduction was causing issues.